--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,21 @@
 .page {
-    max-width: 800px;
+    max-width: 1024px;
     margin: 0 auto;
+}
+
+* {
+    font-family: sans-serif;
+    font-size: inherit;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1em;
 }
