--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+    @apply bg-white rounded-lg overflow-hidden shadow-md hover:shadow-xl relative;
+}
+
+.badge {
+    @apply bg-secondary text-black text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+}
+
+.btn {
+    @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider;
+}
