--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,10 @@
     @apply bg-white rounded-lg overflow-hidden shadow-md hover:shadow-xl relative;
 }
 
+.cardButton {
+    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-lg bg-white mr-5 h-32;
+}
+
 .badge {
     @apply bg-secondary text-black text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
 }
