--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 }
 
 .cardButton {
-    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-lg bg-white mr-5 h-32;
+    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-lg bg-white mr-5 h-32 cursor-pointer;
 }
 
 .badge {
