--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,11 @@
 }
 
 .cardButton {
-    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-lg bg-white mr-5 h-32 cursor-pointer;
+    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-lg bg-white h-32 cursor-pointer;
+}
+
+.maximeCard {
+    @apply rounded overflow-hidden shadow-lg p-5 mb-5 bg-red-200 justify-center text-2xl;
 }
 
 .badge {
