--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,7 @@
 }
 
 .maximeCard {
-    @apply rounded overflow-hidden shadow-lg p-5 mb-5 bg-red-200 justify-center text-2xl;
+    @apply rounded overflow-hidden shadow-lg p-5 mb-5 justify-center text-2xl;
 }
 
 .badge {
