--- a/src/app.css
+++ b/src/app.css
@@ -8,11 +8,11 @@
 }
 
 .cardButton {
-    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-lg bg-white h-32 cursor-pointer;
+    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-2xl border-gray-200 shadow-xl bg-white h-32 cursor-pointer;
 }
 
 .maximeCard {
-    @apply lg:ml-10 lg:mr-10 sm:ml-5 sm:mr-5 xs:ml-5 xs:mr-5 rounded overflow-hidden shadow-lg p-5 justify-center text-2xl;
+    @apply lg:ml-10 lg:mr-10 sm:ml-5 sm:mr-5 xs:ml-5 xs:mr-5 rounded-2xl border-gray-200 overflow-hidden shadow-2xl p-5 justify-center text-2xl mb-5;
 }
 
 .badge {
