--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 }
 
 .cardButton {
-    @apply w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-2xl border-gray-200 shadow-xl bg-white h-32 cursor-pointer;
+    @apply w-full xs:ml-5 xs:mr-5 sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 mb-4 px-10 text-2xl font-bold flex rounded-2xl bg-slate-200 border-gray-200 shadow-xl h-32 cursor-pointer;
 }
 
 .maximeCard {
